# Alice-Kagami

./: .gitignore  AliceNoKagami.sln  AliceNoKagami.vcxproj  AliceNoKagami.vcxproj.filters  DebugConsole.cpp  KagamiConsole.cpp  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  configure.scan
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
include/: AliceNoKagami.hpp  CastBook.hpp  Config.hpp  KagamiConsole.hpp  ThreadPool.hpp  WonderlandAdaptor.hpp
include/Bangumi/: BangumiAdaptor.hpp
libs/win64/libs/: libboost_date_time-vc141-mt-gd-x64-1_71.lib  libboost_date_time-vc142-mt-gd-x64-1_71.lib  libcurl_a.lib  sqlite3.lib
src/: AliceNoKagami.cpp  CastBook.cpp  Makefile.am  Makefile.in  ThreadPool.cpp  WonderlandAdaptor.cpp
src/Bangumi/: BangumiAdaptor.cpp
