AUTOMAKE_OPTIONS=foreign
noinst_LIBRARIES=libKagami.a libAdaptor.a libCastBook.a
libKagami_a_SOURCES=AliceNoKagami.cpp
libAdaptor_a_SOURCES=WonderlandAdaptor.cpp
libCastBook_a_SOURCES=CastBook.cpp
include_HEADERS=\
    ../include/AliceNoKagami.hpp \
    ../include/WonderlandAdaptor.hpp \
    ../include/Config.hpp \
    ../include/CastBook.hpp third-party/gumbo-parser/gumbo.h

