AUTOMAKE_OPTIONS=foreign
noinst_LIBRARIES=libKagami.a 
libKagami_a_SOURCES=AliceNoKagami.cpp\
                    WonderlandAdaptor.cpp \
                    CastBook.cpp \
                    ThreadPool.cpp 

include_HEADERS=\
    ../include/AliceNoKagami.hpp \
    ../include/WonderlandAdaptor.hpp \
    ../include/Config.hpp \
    ../include/CastBook.hpp third-party/gumbo-parser/gumbo.h \
    ../include/ThreadPool.hpp

